tests/neg/namespace-import-branch/main.jo
namespace app

import test    // error

def main =
  println (test.lib.double 10)
